fix: resolve horizontal scroll issue caused by hero title

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -17,16 +17,18 @@
   position: relative;
   column-gap: 63.7px;
   overflow: hidden;
-  margin: 0 0 20px 70px;
   position: relative;
   align-items: center;
-  max-width: 100%;
-  padding: 21px 58px;
+  width: fit-content;
+  max-width: fit-content;
+  margin: 0 0 20px 70px;
+  padding: 20px 58px;
   border-radius: 16px;
   animation: fadeEffect 1s forwards;
 }
 /* ----BLUR---- */
 #hero-panel-icon-bg {
+  display: block;
   border-radius: 50px;
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
@@ -56,7 +58,6 @@
   max-width: 59.9px;
   max-height: 60px;
 }
-#hero-panel-icon-bg,
 #hero-panel-icon-itself {
   z-index: 11;
   display: block;
@@ -68,24 +69,26 @@
 #hero-panel-title-and-data {
   display: flex;
   flex-direction: column;
-  margin-left: 20px;
+  /* margin-left: 20px; */
   align-items: start;
 }
 #hero-panel-title {
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   color: #16100d;
 }
 #hero-panel-data {
+  display: block;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   color: #7c7774;
 }
 #hero-title {
-  display: block;
-  width: 549px;
+  display: flex;
+  flex-direction: column;
   margin: 0 0 20px 70px;
   font-weight: 700;
   font-size: 60px;
@@ -132,9 +135,11 @@
     display: flex;
     flex-direction: column;
     row-gap: 24px;
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
     margin: 0;
-    padding: 21px 58px;
+    padding: 0;
+    padding: 20px;
     border-radius: 0px;
     align-items: start;
     animation: fadeEffect 1s forwards;
@@ -156,7 +161,7 @@
     z-index: 1;
     display: flex;
     flex-direction: row;
-    gap: 19.97px;
+    gap: 0;
   }
   #hero-panel-icon {
     display: block;
@@ -165,7 +170,6 @@
     max-width: 59.9px;
     max-height: 60px;
   }
-  #hero-panel-icon-bg,
   #hero-panel-icon-itself {
     display: block;
     position: absolute;
@@ -191,16 +195,10 @@
     align-items: start;
   }
   #hero-title {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
     margin: 0 0 20px 20px;
-    font-weight: 700;
     font-size: 35px;
     line-height: 46px;
     letter-spacing: 0%;
-
-    text-align: start;
   }
   #hero-description {
     display: block;
