--- a/src/pages/Home/HowItWorks/HowItWorks.css
+++ b/src/pages/Home/HowItWorks/HowItWorks.css
@@ -39,6 +39,7 @@
   align-items: start;
   justify-content: start;
   overflow: hidden;
+  box-sizing: border-box;
   padding: 30px 40px 80px 40px;
   border-radius: 15px;
   color: #025595;
@@ -61,6 +62,8 @@
 #how-it-works-card-inner-wrapper {
   display: flex;
   flex-direction: column;
+  width: fit-content;
+  height: fit-content;
   align-items: start;
   justify-content: start;
 }
@@ -73,18 +76,19 @@
 }
 #how-it-works-card-title {
   display: block;
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 100%;
+  height: 27px;
   margin-bottom: 10px;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 100%;
   color: #222222;
 }
 #how-it-works-card-description {
   display: block;
   width: 300px;
   text-align: left;
-  font-weight: 400;
   font-size: 14px;
+  font-weight: 400;
   line-height: 24px;
 }
 /* ANIMATION */
@@ -188,14 +192,14 @@
   }
   #how-it-works-card-title {
     display: block;
+    margin-bottom: 10px;
     font-weight: 600;
     font-size: 22px;
     line-height: 100%;
-    margin-bottom: 10px;
   }
   #how-it-works-card-description {
     display: block;
-    width: 300px;
+    width: 285px;
     text-align: left;
     font-weight: 400;
     font-size: 14px;
